--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <!-- 核心的滚动区域 -->
             <ul>
                 <li>
-                    <a href="#"><img :src="imgList[index]" alt=""></a>
+                    <a href="index.html"><img :src="imgList[index]" alt=""></a>
                 </li>
 
             </ul>
